@@ -1,4 +1,10 @@
 # TV2-credits-program
 
-# Program set up
-Make sure to have 
+## Program set up checklist with intellij
+- [ ] Download javafx
+- [ ] File -> Project Structure -> Libraries
+- [ ] Add VM options in run configurations: `- [ ] --module-path /path/to/javafx-sdk-15.0.1/lib --add-modules javafx.controls,javafx.fxml`
+
+## Scene builder 
+
+## Running with database
